# karl-app

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
cmake/: cpacklinux.cmake  cpackwin.cmake  policy.cmake  system.cmake  tools.cmake
dependency/mathdll/: CMakeLists.txt  mathdll.cc  mathdll.h
installer/: CMakeCache.txt  cmake_install.cmake
installer/.qt/: QtDeploySupport.cmake
installer/dependency/mathdll/: cmake_install.cmake
installer/karl-app_autogen/: mocs_compilation.cpp
installer/karl-app_autogen/UVLADIE3JM/: moc_main_window.cpp.d
installer/resources/: karl-app.qrc.depends
resources/: karl-app.qrc
resources/icon/: app.icns
scripts/deploy/: karl-app.desktop
src/: main.cc  main_window.cc  main_window.h  main_window.ui  main_window_config.h
src/framelesswindow/: framelesswindow.h
